style.css
body {
  font-family: Arial, sans-serif;
  background-color: #060606;
  margin: 0;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vh;
}

h1 {
  color: white;
}

#album-container {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
  align-items: center;
  max-width: 100%;
}

.album-card {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 3rem;
  width: 90%;
  max-width: 300px;
  background-color: #1b2028;
  border-radius: 16px;
  position: relative;
  border: 3px solid transparent;
  background-clip: padding-box;
  text-align: center;
  color: #f1f3f3;
  background-image: linear-gradient(135deg,
      rgba(117, 46, 124, 0.35),
      rgba(115, 74, 88, 0.1) 15%,
      #1b2028 20%,
      #1b2028 100%);
}

.album-card:after {
  content: "";
  display: block;
  top: -3px;
  left: -3px;
  bottom: -3px;
  right: -3px;
  z-index: -1;
  position: absolute;
  border-radius: 16px;
  background-image: linear-gradient(135deg,
      #752e7c,
      #734a58 20%,
      #1b2028 30%,
      #2c333e 100%);
}

.album-art {
  border-radius: 5%;
  overflow: hidden;
  width: 175px;
  height: 175px;
  position: relative;
}

.album-art img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
}

.album-card h2 {
  margin: 10px 0;
  font-size: 1.5em;
}

.album-card p {
  margin: 5px 0;
  color: #f1f3f3;
  /* color: #7d8396; */
}

